--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -4,3 +4,20 @@ html,body,#app{
   height:100%;
 }
 
+.disable-input{
+  display: inline-block;
+  width: 100%;
+  height: 32px;
+  line-height: 1.5;
+  padding: 4px 7px;
+  font-size: 12px;
+  border: 1px solid #dddee1;
+  border-radius: 4px;
+  position: relative;
+  background-color: #f3f3f3;
+  opacity: 1;
+  cursor: not-allowed;
+  /*color: #ccc;*/
+  line-height: 190%;
+}
+
