主页链接方式修改

--- a/src/common/css/resetIview.scss
+++ b/src/common/css/resetIview.scss
@@ -45,6 +45,6 @@
   background: $menuSelectFontColor;
 }
 .ivu-btn-ghost:hover,.ivu-select-selection:hover{
-  border-color: #19be6b;
-  color: #19be6b;
+  border-color: #19be6b!important;
+  color: #19be6b!important;
 }
