重置开启按钮的样式

--- a/src/common/css/resetIview.scss
+++ b/src/common/css/resetIview.scss
@@ -48,3 +48,8 @@
   border-color: #19be6b!important;
   color: #19be6b!important;
 }
+
+.ivu-switch-checked {
+  border-color: #19be6b!important;
+  background-color: #19be6b!important;
+}
