主页链接方式修改

--- a/src/common/css/globalscss.scss
+++ b/src/common/css/globalscss.scss
@@ -4,7 +4,7 @@
 $menuFontColor:rgba(255,255,255,.8)!default;
 
 //菜单选中文本颜色
-$menuSelectFontColor: #65cea7!default;
+$menuSelectFontColor: #06b9a5!default;
 
 //菜单选中文本框的背景色
 $menuSelectColror:rgba(0,0,0,.3)!default;
