主页链接方式修改

--- a/src/common/css/resetIview.scss
+++ b/src/common/css/resetIview.scss
@@ -61,8 +61,8 @@
   height:30px;
 }
 .ivu-btn-primary:hover{
-  border-color: rgba(90,199,157,0.7);
-  background: rgba(90,199,157,0.7);
+  border-color: $btnInputHoverBgColor;
+  background: $btnInputHoverBgColor;
   box-shadow: none;
 }
 .vertical-center-modal{
