--- a/src/common/css/globalscss.scss
+++ b/src/common/css/globalscss.scss
@@ -15,6 +15,9 @@ $menuHoverBackgroundColor:rgba(0,0,0,.2)!default;
 //菜单背景色
 $menuBackgroundColor:#3a4658!default;
 
+//按钮输入框hover改变色
+$btnInputHoverBgColor:rgba(11,176,155,0.7)!default;
+
 //菜单背景渐变色
 $menuStartColor:#465f5c!default;
 $menuEndColor:rgba(71,130,124,1)!default;
