--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -1,13 +1,13 @@
 @import "globalscss";
 html,body,#app{
-  font-size:14px;
+  font-size:$fontSize;
   position: relative;
   width:100%;
   height:100%;
   font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif!important;
 }
 table,.ivu-input{
-  font-size:14px;
+  font-size:$fontSize;
 }
 
 .disable-input{
@@ -26,6 +26,7 @@ table,.ivu-input{
 }
 .mu-paper.mu-drawer{
   background: #f6f5f8;
+  width:320px;
   .drawer-content{
     width:100%;
     height:100%;
@@ -46,10 +47,15 @@ table,.ivu-input{
       }
       .ivu-icon-close:hover{
         cursor: pointer;
-        transform: rotate(180deg);
+        transform: rotate(90deg);
       }
     }
   }
+}
+.red-star{
+  color: #fb2f2f;
+  font-size: 19px;
+  line-height: 26px;
 }
 
 
