--- a/src/common/css/resetIview.scss
+++ b/src/common/css/resetIview.scss
@@ -31,7 +31,8 @@
 .ivu-menu.ivu-menu-vertical:after{
   display: none;
 }
-.ivu-btn-ghost,.ivu-select-selection:hover,.ivu-select-visible .ivu-select-selection,.ivu-icon-arrow-down-b.ivu-select-arrow{
+
+.ivu-btn-ghost,.ivu-select-selection,.ivu-icon-arrow-down-b.ivu-select-arrow{
   border-color: $menuSelectFontColor!important;
   color: $menuSelectFontColor!important;
   box-shadow: none!important;
@@ -48,8 +49,8 @@
 }
 
 .ivu-switch-checked {
-  border-color: $menuSelectFontColor;
-  background-color: $menuSelectFontColor;
+  border-color: #19be6b!important;
+  background-color: #19be6b!important;
 }
 .ivu-btn-primary{
   background: $menuSelectFontColor;
@@ -60,8 +61,8 @@
   height:30px;
 }
 .ivu-btn-primary:hover{
-  border-color: $btnInputHoverBgColor;
-  background: $btnInputHoverBgColor;
+  border-color: rgba(90,199,157,0.7);
+  background: rgba(90,199,157,0.7);
   box-shadow: none;
 }
 .vertical-center-modal{
@@ -92,20 +93,4 @@
 .ivu-page-item-active {
   background-color: $menuSelectFontColor !important;
   border-color: $menuSelectFontColor !important;
-}
-
-.ivu-page-item:hover,.ivu-page-item-jump-next,.ivu-page-item-jump-prev,.ivu-page-prev:hover,.ivu-page-next:hover{
-  a{
-    color: $menuSelectFontColor;
-  }
-}
-.ivu-page-prev:hover,.ivu-page-next:hover{
-  border-color: $menuSelectFontColor;
-}
-.ivu-cascader-menu-item.ivu-cascader-menu-item-active,.ivu-cascader-menu-item.ivu-cascader-menu-item-active:hover{
-  background: $menuSelectFontColor;
-  color: #fff;
-}
-.ivu-select-single{
-  font-size:$fontSize;
 }
