路由和单选按钮的颜色

--- a/src/common/css/resetIview.scss
+++ b/src/common/css/resetIview.scss
@@ -94,3 +94,7 @@
   background-color: $menuSelectFontColor !important;
   border-color: $menuSelectFontColor !important;
 }
+
+.ivu-radio-checked .ivu-radio-inner {
+  border-color: $menuSelectFontColor !important;
+}
