--- a/src/common/css/resetIview.scss
+++ b/src/common/css/resetIview.scss
@@ -1,84 +1,96 @@
 @import "./globalscss";
-.ivu-menu.ivu-menu-dark.ivu-menu-vertical li{
+
+.ivu-menu.ivu-menu-dark.ivu-menu-vertical li {
   text-align: center;
 }
 
-.ivu-menu-submenum,.ivu-menu{
+.ivu-menu-submenum, .ivu-menu {
   color: $menuFontColor;
 }
 
-.ivu-menu-submenu.ivu-menu-opened .ivu-menu-submenu-title,.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu),.ivu-menu-item.ivu-menu-item-selected{
-  background: $menuSelectColror!important;
-  color: $menuSelectFontColor!important;
-}
-.ivu-menu-vertical .ivu-menu-opened .ivu-menu-item:hover,.ivu-menu-vertical .ivu-menu-submenu .ivu-menu-item-active:hover,.ivu-menu-submenu .ivu-menu-submenu-title:hover,.ivu-menu-item:hover{
-  background: $menuHoverBackgroundColor!important;
-  color: $menuSelectFontColor!important;
+.ivu-menu-submenu.ivu-menu-opened .ivu-menu-submenu-title, .ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu), .ivu-menu-item.ivu-menu-item-selected {
+  background: $menuSelectColror !important;
+  color: $menuSelectFontColor !important;
 }
 
-.layout-menu-left.ivu-col{
- /* background: $menuBackgroundColor!important;
-  background: linear-gradient(to right,$menuStartColor,$menuEndColor)!important;*/
-  background: $menuBackgroundColor!important;
-}
-.ivu-menu.ivu-menu-vertical{
-  background: transparent!important;
-}
-.ivu-menu-vertical .ivu-menu-submenu-title-icon{
-  top:0px;
+.ivu-menu-vertical .ivu-menu-opened .ivu-menu-item:hover, .ivu-menu-vertical .ivu-menu-submenu .ivu-menu-item-active:hover, .ivu-menu-submenu .ivu-menu-submenu-title:hover, .ivu-menu-item:hover {
+  background: $menuHoverBackgroundColor !important;
+  color: $menuSelectFontColor !important;
 }
 
-.ivu-menu.ivu-menu-vertical:after{
+.layout-menu-left.ivu-col {
+  /* background: $menuBackgroundColor!important;
+   background: linear-gradient(to right,$menuStartColor,$menuEndColor)!important;*/
+  background: $menuBackgroundColor !important;
+}
+
+.ivu-menu.ivu-menu-vertical {
+  background: transparent !important;
+}
+
+.ivu-menu-vertical .ivu-menu-submenu-title-icon {
+  top: 0px;
+}
+
+.ivu-menu.ivu-menu-vertical:after {
   display: none;
 }
 
-.ivu-btn-ghost,.ivu-select-selection,.ivu-icon-arrow-down-b.ivu-select-arrow{
-  border-color: $menuSelectFontColor!important;
-  color: $menuSelectFontColor!important;
-  box-shadow: none!important;
+.ivu-btn-ghost, .ivu-select-selection, .ivu-icon-arrow-down-b.ivu-select-arrow {
+  border-color: $menuSelectFontColor !important;
+  color: $menuSelectFontColor !important;
+  box-shadow: none !important;
 }
-.ivu-input:focus,.ivu-input:hover,.ivu-input-number:hover,.ivu-input-number:focus,.ivu-input-number-focused{
+
+.ivu-input:focus, .ivu-input:hover, .ivu-input-number:hover, .ivu-input-number:focus, .ivu-input-number-focused {
   border-color: $menuSelectFontColor;
-  box-shadow: 0 0 0 1px rgba(101,206,167,.2);
+  box-shadow: 0 0 0 1px rgba(101, 206, 167, .2);
 }
-.ivu-select-item-selected,.ivu-select-item-selected:hover{
+
+.ivu-select-item-selected, .ivu-select-item-selected:hover {
   background: $menuSelectFontColor;
 }
-.ivu-btn-ghost:hover,.ivu-select-selection:hover{
+
+.ivu-btn-ghost:hover, .ivu-select-selection:hover {
   opacity: .7;
 }
 
 .ivu-switch-checked {
-  border-color: #19be6b!important;
-  background-color: #19be6b!important;
+  border-color: #19be6b !important;
+  background-color: #19be6b !important;
 }
-.ivu-btn-primary{
+
+.ivu-btn-primary {
   background: $menuSelectFontColor;
   border-color: $menuSelectFontColor;
 }
-.ivu-btn-circle.ivu-btn-icon-only{
-  width:30px;
-  height:30px;
+
+.ivu-btn-circle.ivu-btn-icon-only {
+  width: 30px;
+  height: 30px;
 }
-.ivu-btn-primary:hover{
-  border-color: rgba(90,199,157,0.7);
-  background: rgba(90,199,157,0.7);
+
+.ivu-btn-primary:hover {
+  border-color: rgba(90, 199, 157, 0.7);
+  background: rgba(90, 199, 157, 0.7);
   box-shadow: none;
 }
-.vertical-center-modal{
+
+.vertical-center-modal {
   display: flex;
   align-items: center;
   justify-content: center;
 
-  .ivu-modal{
+  .ivu-modal {
     top: 0;
   }
 }
-.ivu-date-picker-cells-cell-selected em,.ivu-table-header table thead tr th{
-  background:$menuSelectFontColor;
+
+.ivu-date-picker-cells-cell-selected em, .ivu-table-header table thead tr th {
+  background: $menuSelectFontColor;
 }
 
-.ivu-table-header table thead tr th{
+.ivu-table-header table thead tr th {
   color: white;
 }
 
@@ -93,6 +105,10 @@
 .ivu-page-item-active {
   background-color: $menuSelectFontColor !important;
   border-color: $menuSelectFontColor !important;
+}
+
+.ivu-radio-inner:after {
+  background-color: $menuSelectFontColor !important;
 }
 
 .ivu-radio-checked .ivu-radio-inner {
