主页链接方式修改

--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -145,6 +145,8 @@ table,.ivu-input{
   padding:4px;
 }
 
+.ivu-date-picker-cells-cell-today em:after
+
 .store-item-icon-color:nth-child(2) .left-content .iconfont:before{
   background: #808dc4;
 }
@@ -189,7 +191,6 @@ table,.ivu-input{
 .store-item-icon-color:nth-child(14) .left-content .iconfont:before{
   background: #fe808c;
 }
-
 
 
 
