--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -145,7 +145,9 @@ table,.ivu-input{
   padding:4px;
 }
 
-.ivu-date-picker-cells-cell-today em:after
+.ivu-date-picker-cells-cell-today em:after{
+  background: $menuSelectFontColor;
+}
 
 .store-item-icon-color:nth-child(2) .left-content .iconfont:before{
   background: #808dc4;
