主页链接方式修改

--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -165,6 +165,9 @@ table,.ivu-input{
 .store-item-icon-color:nth-child(5) .left-content .iconfont:before{
   background: #17aca8;
 }
+.store-item-icon-color:nth-child(6) .left-content .iconfont:before{
+  background: cornflowerblue;
+}
 
 
 .store-item-icon-color:nth-child(7) .left-content .iconfont:before{
