--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -28,13 +28,14 @@ table,.ivu-input{
   background: #f6f5f8;
   width:30%;
   .drawer-content{
+    min-height:100%;
     display: flex;
     flex-flow: column;
     width:100%;
-    height:100%;
     overflow: auto;
     background: #fff;
     .drawer-title{
+      position: relative;
       background: $menuSelectFontColor;
       width:100%;
       height:60px;
