主页链接方式修改

--- a/src/common/css/resetIview.scss
+++ b/src/common/css/resetIview.scss
@@ -120,3 +120,11 @@
 .ivu-radio-checked .ivu-radio-inner {
   border-color: $menuSelectFontColor !important;
 }
+
+.ivu-page-prev:hover,.ivu-page-next:hover,.ivu-page-prev:hover a,.ivu-page-next:hover a{
+  border-color: $menuSelectFontColor;
+  color: $menuSelectFontColor;
+}
+.ivu-table-border td, .ivu-table-border th{
+  text-align: center;
+}
