--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -26,7 +26,7 @@ table,.ivu-input{
 }
 .mu-paper.mu-drawer{
   background: #f6f5f8;
-  width:30%;
+  width:380px;
   .drawer-content{
     overflow-x: hidden;
     min-height:100%;
@@ -45,8 +45,8 @@ table,.ivu-input{
       line-height: 60px;
       .ivu-icon-close{
         position: absolute;
-        right: 2px;
-        top: 2px;
+        right: 16px;
+        line-height:54px;
         transition:transform .3s ;
       }
       .ivu-icon-close:hover{
@@ -62,7 +62,7 @@ table,.ivu-input{
     .ivu-btn.ivu-btn-primary.ivu-btn-long{
       width:66%;
       margin:0 auto;
-      margin-bottom:3px;
+      margin-bottom:16px;
     }
 
   }
