--- a/src/common/css/reset.css
+++ b/src/common/css/reset.css
@@ -57,6 +57,7 @@ li {
   list-style: none;
 }
 
+/*
 ::-webkit-scrollbar {
   width: 5px;
   height: 5px;
@@ -78,6 +79,7 @@ li {
   background-color: rgba(125, 125, 125, 0.7);
   -webkit-border-radius: 6px;
 }
+*/
 
 html, body {
   width: 100%;
