--- a/src/common/css/resetIview.scss
+++ b/src/common/css/resetIview.scss
@@ -131,4 +131,7 @@
 .ivu-date-picker-cells-cell:hover em{
   background: $menuSelectFontColor;
 }
+.ivu-form-label-left .ivu-form-item-label{
+  font-size:$fontSize;
+}
 
