主页链接方式修改

--- a/src/common/css/globalscss.scss
+++ b/src/common/css/globalscss.scss
@@ -31,6 +31,9 @@ $fontSize:14px!default;
 $menuStartColor:#465f5c!default;
 $menuEndColor:rgba(71,130,124,1)!default;
 
+//drawer左右padding
+$drawerPadding:5px!default;
+
 
 
 
