--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -57,7 +57,7 @@ table,.ivu-input{
     .content{
       flex:1;
       margin-bottom: 3px;
-      padding:0 5px;
+      padding:0 $drawerPadding;
     }
     .ivu-btn.ivu-btn-primary.ivu-btn-long{
       width:66%;
