主页链接方式修改

--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -45,7 +45,8 @@ table,.ivu-input{
       line-height: 60px;
       .ivu-icon-close{
         position: absolute;
-        right: 16px;
+        right: 11px;
+        padding:0 5px;
         line-height:54px;
         transition:transform .3s ;
       }
