主页链接方式修改

--- a/src/common/css/resetIview.scss
+++ b/src/common/css/resetIview.scss
@@ -134,3 +134,6 @@
 .ivu-form-label-left .ivu-form-item-label{
   font-size:$fontSize;
 }
+.ivu-date-picker-header-label:hover{
+  color: $menuSelectFontColor
+}
