--- a/src/common/css/resetIview.scss
+++ b/src/common/css/resetIview.scss
@@ -137,3 +137,13 @@
 .ivu-date-picker-header-label:hover{
   color: $menuSelectFontColor
 }
+.ivu-spin{
+  color: $menuSelectFontColor;
+  .ivu-spin-dot{
+    background-color: $menuSelectFontColor;
+  }
+}
+.ivu-spin-large .ivu-spin-dot{
+  width: 50px;
+  height: 50px;
+}
