--- a/src/common/css/reset.css
+++ b/src/common/css/reset.css
@@ -56,30 +56,36 @@ a {
 li {
   list-style: none;
 }
-
-/*
-::-webkit-scrollbar {
+/*::-webkit-scrollbar {
   width: 5px;
-  height: 5px;
-}
-
-::-webkit-scrollbar-track-piece {
-  background-color: rgba(0, 0, 0, 0.2);
-  -webkit-border-radius: 6px;
-}
-
-::-webkit-scrollbar-thumb:vertical {
-  height: 5px;
+  height: 0px;
+}*/
+/*::-webkit-scrollbar-thumb:vertical {
+  height: 88%;
   background-color: rgba(125, 125, 125, 0.7);
   -webkit-border-radius: 6px;
-}
+}*/
 
+
+/*::-webkit-scrollbar-track-piece {
+  background-color:red;
+  -webkit-border-radius: 6px;
+}*/
+/*
+
+
+/*
 ::-webkit-scrollbar-thumb:horizontal {
   width: 5px;
   background-color: rgba(125, 125, 125, 0.7);
   -webkit-border-radius: 6px;
-}
-*/
+}*/
+
+/*::-webkit-scrollbar-thumb:horizontal {
+  width: 5px;
+  background-color: rgba(125, 125, 125, 0.7);
+  -webkit-border-radius: 6px;
+}*/
 
 html, body {
   width: 100%;
