--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -27,8 +27,12 @@ table,.ivu-input{
 .mu-paper.mu-drawer{
   background: #f6f5f8;
   width:400px;
+  height: 100%;
+  overflow: hidden;
   .drawer-content{
     overflow-x: hidden;
+    position: relative;
+    height: 100%;
     min-height:100%;
     display: flex;
     flex-flow: column;
@@ -56,6 +60,7 @@ table,.ivu-input{
       }
     }
     .content{
+      overflow: auto;
       flex:1;
       margin-bottom: 3px;
       padding:0 $drawerPadding;
