--- a/src/common/css/reset.css
+++ b/src/common/css/reset.css
@@ -56,15 +56,19 @@ a {
 li {
   list-style: none;
 }
-/*::-webkit-scrollbar {
-  width: 5px;
-  height: 0px;
-}*/
-/*::-webkit-scrollbar-thumb:vertical {
+/*
+::-webkit-scrollbar {
+  width: 8px;
+  height: 15px;
+}
+
+::-webkit-scrollbar-thumb:vertical {
   height: 88%;
   background-color: rgba(125, 125, 125, 0.7);
-  -webkit-border-radius: 6px;
-}*/
+  -webkit-border-radius: 10px;
+}
+*/
+
 
 
 /*::-webkit-scrollbar-track-piece {
