--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -4,6 +4,8 @@ html,body,#app{
   position: relative;
   width:100%;
   height:100%;
+ /* font-family: 微软雅黑;*/
+  -webkit-font-smoothing: antialiased;
   font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif!important;
 }
 table,.ivu-input{
