--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -4,8 +4,6 @@ html,body,#app{
   position: relative;
   width:100%;
   height:100%;
- /* font-family: 微软雅黑;*/
-  -webkit-font-smoothing: antialiased;
   font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif!important;
 }
 table,.ivu-input{
@@ -68,8 +66,9 @@ table,.ivu-input{
       padding:0 $drawerPadding;
     }
     .ivu-btn.ivu-btn-primary.ivu-btn-long{
-      width:55%;
-      margin:0 auto 16px;
+      width:66%;
+      margin:0 auto;
+      margin-bottom:16px;
     }
 
   }
@@ -84,9 +83,7 @@ table,.ivu-input{
 }
 
 .store-item .iconfont{
-  font-size:16px;
-  line-height:2;
-  padding-right:3px;
+  font-size:18px;
 }
 .store-item:first-child .iconfont{
   padding:0px;
@@ -162,7 +159,7 @@ table,.ivu-input{
 }
 
 .store-item:first-child .iconfont{
-  padding:0;
+  padding:0px;
   font-size:16px;
 }
 
@@ -234,7 +231,9 @@ table,.ivu-input{
   z-index:1001!important;
 }
 
-
+.ui-cursor {
+  cursor: pointer;
+}
 
 
 
