--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -4,6 +4,7 @@ html,body,#app{
   position: relative;
   width:100%;
   height:100%;
+  -webkit-font-smoothing: antialiased;
   font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif!important;
 }
 table,.ivu-input{
@@ -66,9 +67,8 @@ table,.ivu-input{
       padding:0 $drawerPadding;
     }
     .ivu-btn.ivu-btn-primary.ivu-btn-long{
-      width:66%;
-      margin:0 auto;
-      margin-bottom:16px;
+      width:55%;
+      margin:0 auto 16px;
     }
 
   }
@@ -83,7 +83,9 @@ table,.ivu-input{
 }
 
 .store-item .iconfont{
-  font-size:18px;
+  font-size:16px;
+  line-height:2;
+  padding-right:3px;
 }
 .store-item:first-child .iconfont{
   padding:0px;
