主页链接方式修改

--- a/src/common/css/globalscss.scss
+++ b/src/common/css/globalscss.scss
@@ -35,6 +35,20 @@ $menuEndColor:rgba(71,130,124,1)!default;
 $drawerPadding:5px!default;
 
 
+//按钮下移动画
+@keyframes  moveDown{
+  form{
+    opacity: 0;
+    transform: translateY(0px);
+  }
+  to{
+    opacity: 1;
+    transform: translateY(5px);
+  }
+
+}
+
+
 
 
 
