主页链接方式修改

--- a/src/common/css/resetIview.scss
+++ b/src/common/css/resetIview.scss
@@ -174,3 +174,12 @@
   text-align: left;
 }
 
+.ivu-table-sort i{
+  color: white;
+}
+
+
+.ivu-table-sort i:hover,.ivu-table-sort i.on{
+  color: #bbbec4;
+}
+
