--- a/src/common/css/style.scss
+++ b/src/common/css/style.scss
@@ -245,7 +245,7 @@ table, .ivu-input {
 }
 
 .active-gray {
-  border: 1px solid #f4a21d;
+  border: 1px solid #000;
   color: #000 !important;
 }
 
@@ -266,7 +266,7 @@ table, .ivu-input {
   margin-left: -2%;
   .item {
     display: flex;
-    width: 23%;
+    width: 310px;
     padding: 15px;
     height: 115px;
     font-size: 14px;
@@ -281,6 +281,7 @@ table, .ivu-input {
       }
     }
     .goods-introduction {
+      flex: 1;
       margin-left: 14px;
       h4 {
         font-size: 14px;
@@ -295,10 +296,6 @@ table, .ivu-input {
         font-size: 12px;
         margin-top: 8px;
       }
-    }
-    .operation {
-      margin-left: 20px;
-      margin-top: 27.5px;
     }
   }
 }
