--- a/src/common/css/reset.css
+++ b/src/common/css/reset.css
@@ -32,7 +32,9 @@ footer, header, menu, nav, section {
 body {
   line-height: 1;
 }
-
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill,input:-webkit-autofill:hover, textarea:-webkit-autofill:hover, select:-webkit-autofill:hover,input:-webkit-autofill:focus, textarea:-webkit-autofill:focus, select:-webkit-autofill:focus{
+  -webkit-box-shadow: 0 0 0px 100px white inset;
+}
 blockquote, q {
   quotes: none;
 }
@@ -56,6 +58,7 @@ a {
 li {
   list-style: none;
 }
+
 /*
 ::-webkit-scrollbar {
   width: 8px;
