商品管理模块开发

--- a/src/common/css/resetIview.scss
+++ b/src/common/css/resetIview.scss
@@ -194,3 +194,6 @@
 .ivu-tag-text{
   pointer-events: none;
 }
+.ivu-modal-confirm-footer .ivu-btn-text.ivu-btn-large:hover{
+  color: $menuSelectFontColor;
+}
