颜色选择，尺码选择模块修改，商品增加模块继续修改

--- a/src/components/goods/goodsDrawer.scss
+++ b/src/components/goods/goodsDrawer.scss
@@ -107,6 +107,10 @@ $borderColorGoodsDrawer:#f2f1f2;
     text-align: center;
     height:32px;
     line-height:32px;
+    .ivu-icon-ios-close-empty{
+      display: none;
+    }
+
   }
   .property-content{
     .ivu-tag:last-child{
