商品修改、新增逻辑修改，图片BUG修改

--- a/src/components/goods/goodsDrawer.scss
+++ b/src/components/goods/goodsDrawer.scss
@@ -129,7 +129,7 @@ $borderColorGoodsDrawer:#f2f1f2;
     .detail, .tag {
       margin-top: 8px;
     }
-    .detail .ivu-input-wrapper{
+    .detail .ivu-input-wrapper,.detail .ivu-input-number{
       width:90%;
     }
   }
